# fieldflo-eval-ui

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/providers/: base.py  filesystem.py  langfuse.py
backend/app/routers/: _time_range.py  resources.py  sessions.py  traces.py
backend/app/schemas/: eval.py  session.py
backend/app/services/: eval_runner.py  s3.py
scripts/: generate_thumbnails.sh
src/: App.tsx  config.ts  index.css
src/api/: client.ts  types.ts
src/components/common/: Sidebar.css  Sidebar.tsx  Topbar.css  Topbar.tsx
src/components/evaluation/: ErrorItem.tsx  ErrorList.tsx  RubricPanel.css  RubricPanel.tsx  ScorePill.tsx  TaskCard.css  TaskCard.tsx
src/components/pages/: SessionDetailPage.css  SessionDetailPage.tsx  SessionsPage.css  SessionsPage.tsx  TracesPage.css  TracesPage.tsx
src/utils/: colors.ts  format.ts
