[project]
name = "fieldflo-evals-ui-backend"
version = "0.1.0"
description = "FieldFlo Evals UI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langfuse>=2.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
